adding plus-minus section

--- a/spraying.html
+++ b/spraying.html
@@ -682,9 +682,9 @@
             </div>
 
 
-            <div class="plus-items lg:hidden flex justify-between gap-5">
+            <div class="minus-items lg:hidden flex justify-between gap-5">
                 <div
-                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+                    class="minus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconSpray.svg"
                                 alt="iconSpray"></div>
@@ -722,7 +722,7 @@
                     </div>
                 </div>
                 <div
-                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-[77px] px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+                    class="minus-item bg-bgflex hover:bg-black pt-10 pb-[77px] px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconTractor.svg"
                                 alt="iconTractor"></div>
@@ -769,7 +769,7 @@
                     </div>
                 </div>
                 <div
-                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+                    class="minus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconFly.png"
                                 alt="iconFly"></div>
@@ -810,6 +810,92 @@
             <div class="bg-minus-right lg:hidden"></div>
         </div>
     </div>
+
+
+
+
+
+    <section class="drobline">
+        <div class="container">
+            <div class="primary-title">
+                <h1>Как это работает</h1>
+                <h4>Дробление капли форсункой</h4>
+            </div>
+            <div class="drobline-bg lg:hidden"></div>
+            <div class="drobline-title-bg lg:hidden"></div>
+
+            <div class="drob-items flex flex-row justify-center gap-32">
+                <div class="minus-item bg-bgflex hover:bg-black pt-10 pb-28 px-16 w-fit cursor-pointer rounded-lg">
+                    <div class="drob-img mx-auto"><img class="object-cover" src="img/spraying/drobline1.png"
+                            alt="drobline1"></div>
+                    <div class="drob-name text-[34px] leading-8 ml-7 mt-14 mb-10">Стандартная форсунка:</div>
+                    <div class="drob-info ml-7">
+                        <div class="flex mb-5">
+                            <div class="close-img mr-[14px]"><svg width="26" height="26" viewBox="0 0 26 26" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13.5613 13.4642L18.8263 8.19922C18.9447 8.06106 19.0065 7.88333 18.9995 7.70157C18.9924 7.5198 18.9171 7.34738 18.7885 7.21876C18.6598 7.09013 18.4874 7.01478 18.3057 7.00776C18.1239 7.00074 17.9462 7.06257 17.808 7.18089L12.543 12.4459L7.278 7.17366C7.13984 7.05534 6.96212 6.99352 6.78035 7.00054C6.59859 7.00756 6.42617 7.08291 6.29754 7.21153C6.16892 7.34016 6.09357 7.51258 6.08655 7.69435C6.07952 7.87611 6.14135 8.05383 6.25967 8.192L11.5247 13.4642L6.25245 18.7292C6.17684 18.794 6.11544 18.8736 6.07209 18.9632C6.02874 19.0528 6.00438 19.1504 6.00054 19.2499C5.9967 19.3494 6.01346 19.4486 6.04977 19.5412C6.08607 19.6339 6.14115 19.7181 6.21153 19.7885C6.28192 19.8589 6.36609 19.9139 6.45877 19.9502C6.55145 19.9865 6.65063 20.0033 6.7501 19.9995C6.84956 19.9956 6.94716 19.9713 7.03676 19.9279C7.12636 19.8846 7.20604 19.8232 7.27078 19.7476L12.543 14.4826L17.808 19.7476C17.9462 19.8659 18.1239 19.9277 18.3057 19.9207C18.4874 19.9137 18.6598 19.8383 18.7885 19.7097C18.9171 19.5811 18.9924 19.4086 18.9995 19.2269C19.0065 19.0451 18.9447 18.8674 18.8263 18.7292L13.5613 13.4642Z"
+                                        fill="#F52525" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Размер капли 250-400 микрон</span>
+                        </div>
+                        <div class="flex mb-5">
+                            <div class="close-img mr-[14px]"><svg width="26" height="26" viewBox="0 0 26 26" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13.5613 13.4642L18.8263 8.19922C18.9447 8.06106 19.0065 7.88333 18.9995 7.70157C18.9924 7.5198 18.9171 7.34738 18.7885 7.21876C18.6598 7.09013 18.4874 7.01478 18.3057 7.00776C18.1239 7.00074 17.9462 7.06257 17.808 7.18089L12.543 12.4459L7.278 7.17366C7.13984 7.05534 6.96212 6.99352 6.78035 7.00054C6.59859 7.00756 6.42617 7.08291 6.29754 7.21153C6.16892 7.34016 6.09357 7.51258 6.08655 7.69435C6.07952 7.87611 6.14135 8.05383 6.25967 8.192L11.5247 13.4642L6.25245 18.7292C6.17684 18.794 6.11544 18.8736 6.07209 18.9632C6.02874 19.0528 6.00438 19.1504 6.00054 19.2499C5.9967 19.3494 6.01346 19.4486 6.04977 19.5412C6.08607 19.6339 6.14115 19.7181 6.21153 19.7885C6.28192 19.8589 6.36609 19.9139 6.45877 19.9502C6.55145 19.9865 6.65063 20.0033 6.7501 19.9995C6.84956 19.9956 6.94716 19.9713 7.03676 19.9279C7.12636 19.8846 7.20604 19.8232 7.27078 19.7476L12.543 14.4826L17.808 19.7476C17.9462 19.8659 18.1239 19.9277 18.3057 19.9207C18.4874 19.9137 18.6598 19.8383 18.7885 19.7097C18.9171 19.5811 18.9924 19.4086 18.9995 19.2269C19.0065 19.0451 18.9447 18.8674 18.8263 18.7292L13.5613 13.4642Z"
+                                        fill="#F52525" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Большой расход воды</span>
+                        </div>
+                        <div class="flex">
+                            <div class="close-img mr-[14px]"><svg width="26" height="26" viewBox="0 0 26 26" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13.5613 13.4642L18.8263 8.19922C18.9447 8.06106 19.0065 7.88333 18.9995 7.70157C18.9924 7.5198 18.9171 7.34738 18.7885 7.21876C18.6598 7.09013 18.4874 7.01478 18.3057 7.00776C18.1239 7.00074 17.9462 7.06257 17.808 7.18089L12.543 12.4459L7.278 7.17366C7.13984 7.05534 6.96212 6.99352 6.78035 7.00054C6.59859 7.00756 6.42617 7.08291 6.29754 7.21153C6.16892 7.34016 6.09357 7.51258 6.08655 7.69435C6.07952 7.87611 6.14135 8.05383 6.25967 8.192L11.5247 13.4642L6.25245 18.7292C6.17684 18.794 6.11544 18.8736 6.07209 18.9632C6.02874 19.0528 6.00438 19.1504 6.00054 19.2499C5.9967 19.3494 6.01346 19.4486 6.04977 19.5412C6.08607 19.6339 6.14115 19.7181 6.21153 19.7885C6.28192 19.8589 6.36609 19.9139 6.45877 19.9502C6.55145 19.9865 6.65063 20.0033 6.7501 19.9995C6.84956 19.9956 6.94716 19.9713 7.03676 19.9279C7.12636 19.8846 7.20604 19.8232 7.27078 19.7476L12.543 14.4826L17.808 19.7476C17.9462 19.8659 18.1239 19.9277 18.3057 19.9207C18.4874 19.9137 18.6598 19.8383 18.7885 19.7097C18.9171 19.5811 18.9924 19.4086 18.9995 19.2269C19.0065 19.0451 18.9447 18.8674 18.8263 18.7292L13.5613 13.4642Z"
+                                        fill="#F52525" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Скатывание капли на землю</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="plus-item bg-bgflex hover:bg-black pt-10 pb-28 px-16 w-fit cursor-pointer rounded-lg">
+                    <div class="drob-img mx-auto"><img class="object-cover" src="img/spraying/drobline2.png"
+                            alt="drobline2"></div>
+                    <div class="drob-name text-[34px] leading-8 ml-7 mt-14 mb-10">Форсунка УМО</div>
+                    <div class="drob-info ml-7">
+                        <div class="flex mb-5">
+                            <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Размер капли 80-150 микрон</span>
+                        </div>
+                        <div class="flex mb-5">
+                            <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Более эффективное проникновение рабочего
+                                раствора</span>
+                        </div>
+                        <div class="flex">
+                            <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg></div>
+                            <span class="text-lg leading-8 font-light">Препарат оседает на листьях и стеблях не попадая
+                                в почву</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
 
