changing swiper animation shadow

--- a/spraying.html
+++ b/spraying.html
@@ -545,7 +545,7 @@
             <!-- Swiper -->
             <div class="swiper plusSwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide minus">
                         <div
                             class="plus-item-sw bg-black pt-10 pb-14 px-6 sm:pb-7 sm:pt-7 h-fit cursor-pointer rounded-lg">
                             <div class="plus-title flex items-center">
@@ -638,7 +638,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="plus-item-sw bg-black pt-10 pb-14 px-6 sm:pb-7 sm:pt-7 h-fit cursor-pointer rounded-lg">
+                            class="minus-item-sw bg-black pt-10 pb-14 px-6 sm:pb-7 sm:pt-7 h-fit cursor-pointer rounded-lg">
                             <div class="plus-title flex items-center">
                                 <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconFly.png"
                                         alt="iconFly"></div>
