main section changing

--- a/agromonitoring.html
+++ b/agromonitoring.html
@@ -97,32 +97,38 @@
                     class="main-title pt-28 ss:pt-24 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[270px] md:pt-28">
                     Агромониторинг для управления бизнесом</div>
                 <div
-                    class="max-w-[460px] md:max-w-[323px] sm:max-w-[304px] text-2xl md:text-lg sm:text-base leading-10 md:leading-8 mt-10 md:mt-6 sm:mt-5">
+                    class="max-w-[460px] md:max-w-[323px] ss:max-w-[374px] sm:max-w-[304px] text-2xl md:text-lg sm:text-base leading-10 md:leading-8 mt-10 md:mt-6 sm:mt-5">
                     Высокое качество продукции и хороший урожай - результат точного планирования и быстрого реагирования
                     на возникающие
                     посевам угроз
                 </div>
                 <div
-                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 ss:mt-1 ss:mb-7 flex flex-wrap text-white">
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
+                    class="agro-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 ss:mt-1 ss:mb-7 flex flex-wrap gap-5 lg:gap ss:justify-center text-white">
+                    <div
+                        class="agro-item flex basis-[33%] md:basis-[34%] ss:basis-[44%]  sm:basis-[88%] items-center mb-4 ss:mb-0">
                         <div class="block mr-3">
-                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f1.png" alt="">
+                            <img class="md:w-8 ss:w-6 md:h-8 ss:h-6" src="img/agromonitoring/main_i1.png" alt="">
                         </div>
-                        <h6 class="text-xl md:text-lg sm:text-[15px] leading-7 md:leading-[18px]">Полная автоматизация
+                        <h6 class="text-xl md:text-lg sm:text-[15px] ss:text-[14px] leading-7 md:leading-[18px]">Полная
+                            автоматизация
                         </h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
+                    <div
+                        class="agro-item flex basis-[33%] md:basis-[34%] ss:basis-[44%]  sm:basis-[88%] items-center mb-4 ss:mb-0">
                         <div class="block mr-3">
-                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f2.png" alt="">
+                            <img class="md:w-8 ss:w-6 md:h-8 ss:h-6" src="img/agromonitoring/main_i2.png" alt="">
                         </div>
-                        <h6 class="text-xl md:text-lg sm:text-[15px] leading-7 md:leading-[18px]">Оперативность съемки
+                        <h6 class="text-xl md:text-lg sm:text-[15px] ss:text-[14px] leading-7 md:leading-[18px]">
+                            Оперативность съемки
                         </h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
+                    <div
+                        class="agro-item flex basis-[33%] md:basis-[34%] ss:basis-[44%]  sm:basis-[88%] items-center mb-4">
                         <div class="block mr-3">
-                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f3.png" alt="">
+                            <img class="md:w-8 ss:w-6 md:h-8 ss:h-6" src="img/agromonitoring/main_i3.png" alt="">
                         </div>
-                        <h6 class="text-xl md:text-lg sm:text-[15px] leading-7 md:leading-[18px]">Высокая точность</h6>
+                        <h6 class="text-xl md:text-lg sm:text-[15px] ss:text-[14px] leading-7 md:leading-[18px]">Высокая
+                            точность</h6>
                     </div>
                 </div>
             </div>
