changig main-about section for reponsive design

--- a/news_post/potatofeild.html
+++ b/news_post/potatofeild.html
@@ -18,7 +18,7 @@
             <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] ss:px-0">
                 <div class="header-item flex items-center text-white">
                     <div class="img-logo mr-5 md:mr-4"><img src="img/main/logo.png" alt="logo"></div>
-                    <div class="phone-number ss:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
+                    <div class="phone-number md:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
                 </div>
                 <div class="header-item flex items-center text-white">
                     <div class="icons flex">
@@ -82,7 +82,8 @@
         <div class="container">
             <a href="../index.html" class="text-white cursor-pointer">Главная / </a>
             <a href="../news.html" class="text-white cursor-pointer">Новости /</a>
-            <a href="./potatofeild.html" class="text-lightgreen cursor-pointer">AgroScout на картофельной конференции, Орегон</a>
+            <a href="./potatofeild.html" class="text-lightgreen cursor-pointer">AgroScout на картофельной конференции,
+                Орегон</a>
         </div>
     </div>
 
