--- a/aboutus.html
+++ b/aboutus.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="max-w-[670px]">
                 <div
-                    class="main-title pt-28 ss:pt-24 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[270px] md:pt-28">
+                    class="main-title pt-28 lg:pt-24 md:pt-20 ss:pt-16 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[270px]">
                     О компании AgroScout</div>
                 <div
                     class="max-w-[460px] md:max-w-[323px] sm:max-w-[304px] text-2xl md:text-lg sm:text-base leading-10 md:leading-8 mt-10 md:mt-6 sm:mt-5">
@@ -103,7 +103,7 @@
                     </svg>
                     <img class="dron-image" src="img/main/header-dron.png" alt="">
                 </div>
-                <div class="main-box mt-36 sm:mt-20 flex sm:justify-around text-white">
+                <div class="main-box mt-36 md:mt-28 sm:mt-20 flex sm:justify-around text-white">
                     <div class="main-item mr-6 md:mr-4">
                         <h4
                             class="text-5xl m-0 p-0 cursor-pointer lg:text-4xl md:text-2xl md:leading-6 sm:text-lg sm:leading-4">
@@ -137,16 +137,19 @@
     </div>
 
 
+    <div class="sections-title flex-auto my-10 sm:my-0 sm:mt-8 md:ml-[30px] sm:ml-0 text-2xl sm:text-xl leading-6 flex">
+        <div class="container">
+            <a href="./index.html" class="text-white cursor-pointer">Главная / </a>
+            <a href="./aboutus.html" class="text-lightgreen cursor-pointer">О нас</a>
+        </div>
+    </div>
+
 
 
     <section class="about">
         <div class="container">
-            <div class="primary-title">
-                <h1>Кто мы такие</h1>
-                <h4>О компании</h4>
-            </div>
             <div class="info">
-                <div class="about-text">
+                <div class="about-text ">
                     <p class="font-light text-lg leading-8">Компания STS.center применяет высокотехнологичные агродроны
                         и
                         БПЛА, которые модернизированы и собраны нашими инженерами для сельского и лесного хозяйства, а
