--- a/aboutus.html
+++ b/aboutus.html
@@ -201,91 +201,82 @@
 
 
 
-    <section class="news mt-20 md:mt-12 sm:mt-0 py-10 md:pb-0 md:pt-0 mb-20 md:mb-12 md:px-7 ss:px-0 ">
+    <section class="news mt-20 md:mt-12 sm:mt-0 py-10 lg:py-0 md:pb-0 md:pt-0 mb-20 md:mb-12 md:px-7 ss:px-0 ">
         <div class="container">
             <div class="primary-title">
-                <h1>Что у нас нового</h1>
-                <h4>Новости</h4>
+                <h1>О нас</h1>
+                <h4>Наша команда</h4>
             </div>
 
             <div class="swiper mySwiperTwo">
                 <div class="swiper-wrapper">
-                    <div div class="swiper-slide">
-                        <picture><img src="img/main/news1.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Дроны
-                            –
-                            будущее сельского
-                            хозяйства</h5>
-                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Новые технологии
-                            не
-                            обходят
-                            стороной и самую консервативную
-                            отрасль – сельское хозяйство. Согласно прогнозам международной общественной организации
-                            Association for Unmanned Vehicle Systems International, в скором времени агросектор станет
-                            крупнейшим потребителем дронов – беспилотных летательных аппаратов (БПЛА).</p>
-                        <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                    <div class="swiper-slide">
+                        <div class="news-item">
+                            <picture><img src="img/aboutus/command1.png" alt="command1"></picture>
+                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Шарон Коэн</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Генеральный директор и основатель
+                            </p>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <picture><img src="img/main/news2.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Зачем
-                            нужны беспилотники в сельском хозяйстве?
-                        </h5>
-                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Использование
-                            дронов в
-                            земледелии и в целом в сельском
-                            хозяйстве
-                            - одно из наиболее перспективных направлений применения этой технологии. БЛА могут быть
-                            эффективно использованы для планирования и контроля этапов сельскохозяйственного
-                            производства, а
-                            также для химической обработки посевов и других растений. </p>
-                        <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                        <div class="news-item-sw">
+                            <picture><img src="img/aboutus/command2.png" alt="command2"></picture>
+                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Лена Пивник</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Финансовый директор</p>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <picture><img src="img/main/news3.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">
-                            Создание
-                            цифровых карт и контуров полей</h5>
-                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Многие
-                            руководители
-                            агрохозяйств
-                            только приблизительно знают
-                            площади своих полей, и это негативно влияет на точность расчетов внесения минудобрений и
-                            подсчета полученной продукции. Чтобы эффективно управлять сельскохозяйственным предприятием
-                            потребуется точное знание посевных площадей.</p>
-                        <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                        <div class="news-item-sw">
+                            <picture><img src="img/aboutus/command3.png" alt="command3"></picture>
+                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Альберто Гарса</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Технический директор</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="news-item-sw">
+                            <picture><img src="img/aboutus/command4.png" alt="command4"></picture>
+                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Яэль Мизрахи</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Директор по глобальным продажам
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="news-item-sw">
+                            <picture><img src="img/aboutus/command5.png" alt="command5"></picture>
+                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Ракель Кибрит</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Разработчик компьютерного зрения
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
 
-            <div class="news-box flex justify-between md:hidden">
-                <div class="news-item basis-[31%]">
-                    <picture><img src="img/main/news1.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12 pl-4">Дроны – будущее сельского хозяйства</h5>
-                    <p class="my-8 font-light text-lg px-4">Новые технологии не обходят стороной и самую консервативную
-                        отрасль – сельское хозяйство. Согласно прогнозам международной общественной организации
-                        Association for Unmanned Vehicle Systems International, в скором времени агросектор станет
-                        крупнейшим потребителем дронов – беспилотных летательных аппаратов (БПЛА).</p>
-                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
+            <div class="news-box flex flex-wrap gap-4 md:hidden">
+                <div class="news-item basis-[30%]">
+                    <picture><img src="img/aboutus/command1.png" alt="command1"></picture>
+                    <h5 class="text-2xl leading-[22px] my-5 pl-4">Шарон Коэн</h5>
+                    <p class="command-work mb-5 mt-0 font-light text-lg px-4">Генеральный директор и основатель</p>
                 </div>
-                <div class="news-item basis-[31%]">
-                    <picture><img src="img/main/news2.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12 pl-4">Зачем нужны беспилотники в сельском хозяйстве?</h5>
-                    <p class="my-8 font-light text-lg px-4">Использование дронов в земледелии и в целом в сельском
-                        хозяйстве
-                        - одно из наиболее перспективных направлений применения этой технологии. БЛА могут быть
-                        эффективно использованы для планирования и контроля этапов сельскохозяйственного производства, а
-                        также для химической обработки посевов и других растений. </p>
-                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
+                <div class="news-item basis-[30%]">
+                    <picture><img src="img/aboutus/command2.png" alt="command2"></picture>
+                    <h5 class="text-2xl leading-[22px] my-5 pl-4">Лена Пивник</h5>
+                    <p class="command-work mb-5 mt-0 font-light text-lg px-4">Финансовый директор</p>
                 </div>
-                <div class="news-item basis-[31%]">
-                    <picture><img src="img/main/news3.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12 pl-4">Создание цифровых карт и контуров полей</h5>
-                    <p class="my-8 font-light text-lg px-4">Многие руководители агрохозяйств только приблизительно знают
-                        площади своих полей, и это негативно влияет на точность расчетов внесения минудобрений и
-                        подсчета полученной продукции. Чтобы эффективно управлять сельскохозяйственным предприятием
-                        потребуется точное знание посевных площадей.</p>
-                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
+                <div class="news-item basis-[30%]">
+                    <picture><img src="img/aboutus/command3.png" alt="command3"></picture>
+                    <h5 class="text-2xl leading-[22px] my-5 pl-4">Альберто Гарса</h5>
+                    <p class="command-work mb-5 mt-0 font-light text-lg px-4">Технический директор</p>
+                </div>
+                <div class="news-item basis-[30%]">
+                    <picture><img src="img/aboutus/command4.png" alt="command4"></picture>
+                    <h5 class="text-2xl leading-[22px] my-5 pl-4">Яэль Мизрахи</h5>
+                    <p class="command-work mb-5 mt-0 font-light text-lg px-4">Директор по глобальным продажам</p>
+                </div>
+                <div class="news-item basis-[30%]">
+                    <picture><img src="img/aboutus/command5.png" alt="command5"></picture>
+                    <h5 class="text-2xl leading-[22px] my-5 pl-4">Ракель Кибрит</h5>
+                    <p class="command-work mb-5 mt-0 font-light text-lg px-4">Разработчик компьютерного зрения</p>
                 </div>
             </div>
         </div>
