adding category section

--- a/aboutus.html
+++ b/aboutus.html
@@ -208,43 +208,48 @@
                 <h4>Наша команда</h4>
             </div>
 
-            <div class="swiper mySwiperTwo">
+            <div class="swiper mySwiperTwo three">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="news-item">
+                        <div class="news-item-sw">
                             <picture><img src="img/aboutus/command1.png" alt="command1"></picture>
-                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Шарон Коэн</h5>
-                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Генеральный директор и основатель
+                            <h5 class="text-2xl sm:text-xl leading-[22px] my-5 pl-4">Шарон Коэн</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg sm:text-[15px] px-4">Генеральный
+                                директор и основатель
                             </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="news-item-sw">
                             <picture><img src="img/aboutus/command2.png" alt="command2"></picture>
-                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Лена Пивник</h5>
-                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Финансовый директор</p>
+                            <h5 class="text-2xl sm:text-xl leading-[22px] my-5 pl-4">Лена Пивник</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg sm:text-[15px] px-4">Финансовый директор
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="news-item-sw">
                             <picture><img src="img/aboutus/command3.png" alt="command3"></picture>
-                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Альберто Гарса</h5>
-                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Технический директор</p>
+                            <h5 class="text-2xl sm:text-xl leading-[22px] my-5 pl-4">Альберто Гарса</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg sm:text-[15px] px-4">Технический
+                                директор</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="news-item-sw">
                             <picture><img src="img/aboutus/command4.png" alt="command4"></picture>
-                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Яэль Мизрахи</h5>
-                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Директор по глобальным продажам
+                            <h5 class="text-2xl sm:text-xl leading-[22px] my-5 pl-4">Яэль Мизрахи</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg sm:text-[15px] px-4">Директор по
+                                глобальным продажам
                             </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="news-item-sw">
                             <picture><img src="img/aboutus/command5.png" alt="command5"></picture>
-                            <h5 class="text-2xl leading-[22px] my-5 pl-4">Ракель Кибрит</h5>
-                            <p class="command-work mb-5 mt-0 font-light text-lg px-4">Разработчик компьютерного зрения
+                            <h5 class="text-2xl sm:text-xl leading-[22px] my-5 pl-4">Ракель Кибрит</h5>
+                            <p class="command-work mb-5 mt-0 font-light text-lg sm:text-[15px] px-4">Разработчик
+                                компьютерного зрения
                             </p>
                         </div>
                     </div>
